# collective

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  rustfmt.toml
.config/: nextest.toml
.github/: codecov.yml
.github/legal/signatures/: cla-v1.json
.github/workflows/: cla.yml  clippy.yml  codecov.yml  coverage.yml  fmt.yml  outdated.yml  rust-test.yml  test.yml  todo.yml
code/: README.md
code/builder/: Cargo.toml
code/builder/src/: lib.rs
code/builder/tests/: builder.rs
code/derive-build/: Cargo.toml
code/derive-build/src/: lib.rs
code/derive-build/tests/: builder.rs
code/derive-discriminant/: Cargo.toml
code/derive-discriminant/src/: lib.rs
code/derive-discriminant/tests/: builder.rs  macro.rs
code/executor/: Cargo.toml  README.md
code/executor/src/: command.rs  lib.rs  main.rs  process.rs
code/executor/src/command/: bash.rs  librs.rs  zsh.rs
code/executor/src/process/: question.rs  reader.rs  writer.rs
code/frontend-cli/: Cargo.toml
code/frontend-cli/src/: app.rs  bootstrap.rs  comms.rs  main.rs  terminal.rs  ui.rs  widget.rs
code/html-to-md/: Cargo.toml
code/html-to-md/src/: lib.rs
code/launcher/: Cargo.toml  Dockerfile  README.md
code/launcher/src/: main.rs
code/openai/: Cargo.toml  README.md
code/openai/src/: lib.rs
code/protocol/: Cargo.toml
code/protocol/src/: client.rs  lib.rs  server.rs
code/utils/: Cargo.toml  README.md
code/utils/src/: discretize.rs  lib.rs  str.rs
launcher/src/: README.md  main.rs
openai/: Cargo.toml
openai/src/: lib.rs
signatures/version1/: cla.json
utils/: Cargo.toml
utils/src/: discretize.rs  lib.rs
