[workspace]
members = [
    "code/derive-build",
    "code/executor",
    "code/launcher",
    "code/openai",
    "code/utils",
]

[workspace.dependencies]
derive-build = { path = "code/derive-build" }
executor = { path = "code/executor" }
launcher = { path = "code/launcher" }
openai = { path = "code/openai" }
utils = { path = "code/utils" }