[workspace]
members = [
    "code/derive-build",
    "code/derive-discriminant",
    "code/executor",
    "code/launcher",
    "code/openai",
    "code/utils",
    "code/html-to-md",
]

[workspace.dependencies]
derive-build = { path = "code/derive-build" }
derive-discriminant = { path = "code/derive-discriminant" }
executor = { path = "code/executor" }
launcher = { path = "code/launcher" }
openai = { path = "code/openai" }
utils = { path = "code/utils" }
html-to-md = { path = "code/html-to-md" }