[workspace]
members = [
    "code/protocol",
    "code/executor",
    "code/frontend-cli",
    "code/html-to-md",
    "code/launcher",
    "code/utils",
]

[workspace.dependencies]
protocol = { path = "code/protocol" }
executor = { path = "code/executor" }
html-to-md = { path = "code/html-to-md" }
launcher = { path = "code/launcher" }
utils = { path = "code/utils" }
