[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
derive-build.workspace = true
derive-discriminant.workspace = true
futures = "0.3.28"
openai.workspace = true
ron = "0.8.0"
tokio = { version = "1.27.0", features = ["full"] }
utils.workspace = true
tempfile = "3.5.0"
#html5ever = "0.26.0"
tl = { version = "0.7.7", features = ["simd"] }
reqwest = "0.11.16"

