[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
clap = { version = "4.2.4", features = ["derive"] }
derive-build = "0.1.1"
derive-discriminant = "0.1.1"
futures = "0.3.28"
once_cell = "1.17.1"

parking_lot = "0.12.1"
protocol.workspace = true
regex = "1.8.1"
reqwest = "0.11.16"
ron = "0.8.0"
serde_json = "1.0.96"
smooth-stream = "0.1.1"
tempfile = "3.5.0"
tl = { version = "0.7.7", features = ["simd"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-openai = "1.0.1"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.18.0"
tracing = "0.1.38"
tracing-subscriber = "0.3.16"
utils.workspace = true
