[package]
name = "frontend-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = "0.26.1"
futures = "0.3.28"
protocol.workspace = true
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tui = "0.19.0"
