[package]
name = "html-to-md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
derive-build = "0.1.1"
once_cell = "1.17.1"
regex = "1.8.1"
tl = { version = "0.7.7", features = ["simd"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["full"] }
